# onepage

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  onepage.toml  onepage.toml.example
src/: bing_wallpaper.rs  cli.rs  config.rs  handlers.rs  main.rs  state.rs
static/css/: style.css
static/js/: app.js
templates/: index.html
