[package]
name = "onepage"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
config = "0.15.22"
reqwest = { version = "0.13.2", features = ["json", "native-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
tera = "1.20.1"
chrono = "0.4.44"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.102"
tower-http = { version = "0.6.8", features = ["fs"] }
serde_json = "1.0.149"
chrono-tz = "0.10.4"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
